next
[*] Some methods are now protected.
[*] Added $with to findAllByTags().
[]

0.6
[+] Initial public release.