@@ -1,3 +1,5 @@
+Поведение для реализации корзины моделей.
+
 Установка и настройка
 ---------------------
 
