@@ -1,4 +1,9 @@
 <?php
+/**
+ * Post model
+ *
+ * @property id
+ */
 class Post extends CActiveRecord {
     public static function model($className = __CLASS__) {
         return parent::model($className);
