@@ -1,12 +1,12 @@
 <?php
 return array(
     'post1'=>array(
-        
+        'id' => 1
     ),
     'post2'=>array(
-
+        'id' => 2
     ),
     'post3'=>array(
-
+        'id' => 3
     ),
 );
